.opsera-gokul-s-delight-ui/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-gokul-s-delight-ui-dev
  labels:
    tenant: opsera
    app: gokul-s-delight-ui
    environment: dev
    managed-by: argocd
