.opsera-gokul-s-delight-ui/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gokul-s-delight-ui
  namespace: opsera-gokul-s-delight-ui-dev
  labels:
    app: gokul-s-delight-ui
    tenant: opsera
spec:
  type: ClusterIP
  selector:
    app: gokul-s-delight-ui
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
